fix a low contrast problèm on the filter & the missing alt on some slider images. imporve accessibility :whelchair: :construction:

--- a/assets/style.css
+++ b/assets/style.css
@@ -112,7 +112,8 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	/*background-color: #BEB45A;*/
+    background-color: #0d6efd;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
